--- a/forms/bookingApprovalForm.json
+++ b/forms/bookingApprovalForm.json
@@ -1,7 +1,81 @@
 {
     "elements": [{
         "elements": [{
-            "elements": [],
+            "elements": [
+                {
+                    "className": "org.joget.apps.form.lib.HiddenField",
+                    "properties": {
+                        "useDefaultWhenEmpty": "",
+                        "validator": {
+                            "className": "",
+                            "properties": {}
+                        },
+                        "workflowVariable": "",
+                        "id": "booking_id",
+                        "value": ""
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.TextField",
+                    "properties": {
+                        "requiredSanitize": "",
+                        "permissionHidden": "",
+                        "maxlength": "",
+                        "validator": {
+                            "className": "",
+                            "properties": {}
+                        },
+                        "label": "Facility Name",
+                        "disableIncrementDecrementArrow": "",
+                        "encryption": "",
+                        "readonly": "true",
+                        "size": "",
+                        "workflowVariable": "",
+                        "style": "",
+                        "id": "facility_name",
+                        "placeholder": "",
+                        "value": "",
+                        "readonlyLabel": "",
+                        "storeNumeric": ""
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.DatePicker",
+                    "properties": {
+                        "readonly": "False",
+                        "allowManual": "False",
+                        "yearRange": "c-10:c+10",
+                        "dataFormat": "yyyy-MM-dd",
+                        "label": "Date Picker",
+                        "datePickerType": "",
+                        "currentDateAs": "",
+                        "id": "field3",
+                        "disableWeekends": "False",
+                        "readonlyLabel": "False"
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.SelectBox",
+                    "properties": {
+                        "readonly": "False",
+                        "multiple": "False",
+                        "label": "Select Box",
+                        "id": "field4",
+                        "readonlyLabel": "False"
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.TextArea",
+                    "properties": {
+                        "readonly": "False",
+                        "label": "Text Area",
+                        "id": "field5",
+                        "rows": "5",
+                        "cols": "20",
+                        "readonlyLabel": "False"
+                    }
+                }
+            ],
             "className": "org.joget.apps.form.model.Column",
             "properties": {"width": "100%"}
         }],
