--- a/forms/bookingApprovalForm.json
+++ b/forms/bookingApprovalForm.json
@@ -99,8 +99,12 @@
                             }
                         ],
                         "validator": {
-                            "className": "",
-                            "properties": {}
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "",
+                                "mandatory": "true"
+                            }
                         },
                         "workflowVariable": "",
                         "label": "Status",
