Update form bookingApprovalForm.

--- a/forms/bookingApprovalForm.json
+++ b/forms/bookingApprovalForm.json
@@ -116,12 +116,20 @@
                 {
                     "className": "org.joget.apps.form.lib.TextArea",
                     "properties": {
-                        "readonly": "False",
-                        "label": "Text Area",
-                        "id": "field5",
+                        "requiredSanitize": "",
+                        "readonly": "",
+                        "validator": {
+                            "className": "",
+                            "properties": {}
+                        },
+                        "workflowVariable": "",
+                        "label": "Remark",
+                        "id": "manager_remarks",
+                        "placeholder": "",
                         "rows": "5",
                         "cols": "20",
-                        "readonlyLabel": "False"
+                        "value": "",
+                        "readonlyLabel": ""
                     }
                 }
             ],
