--- a/forms/adminFacilityConfigurationForm.json
+++ b/forms/adminFacilityConfigurationForm.json
@@ -3,33 +3,6 @@
         "elements": [{
             "elements": [
                 {
-                    "className": "org.joget.apps.form.lib.TextField",
-                    "properties": {
-                        "requiredSanitize": "",
-                        "maxlength": "",
-                        "validator": {
-                            "className": "org.joget.apps.form.lib.DefaultValidator",
-                            "properties": {
-                                "type": "alphabet",
-                                "message": "",
-                                "mandatory": "true"
-                            }
-                        },
-                        "label": "Facility Name",
-                        "disableIncrementDecrementArrow": "",
-                        "encryption": "",
-                        "readonly": "",
-                        "size": "",
-                        "workflowVariable": "",
-                        "style": "",
-                        "id": "facilityName",
-                        "placeholder": "",
-                        "value": "",
-                        "readonlyLabel": "",
-                        "storeNumeric": ""
-                    }
-                },
-                {
                     "className": "org.joget.apps.form.lib.SelectBox",
                     "properties": {
                         "controlField": "",
@@ -71,7 +44,7 @@
                             "className": "org.joget.apps.form.lib.DefaultValidator",
                             "properties": {
                                 "type": "",
-                                "message": "",
+                                "message": "Please choose a facility!",
                                 "mandatory": "true"
                             }
                         },
@@ -88,17 +61,21 @@
                         "requiredSanitize": "",
                         "maxlength": "",
                         "validator": {
-                            "className": "",
-                            "properties": {}
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "numeric",
+                                "message": "Enter Number Only",
+                                "mandatory": "true"
+                            }
                         },
-                        "label": "Capacity",
+                        "label": "Capacity (Number of participant/s)",
                         "disableIncrementDecrementArrow": "",
                         "encryption": "",
                         "readonly": "",
                         "size": "",
                         "workflowVariable": "",
                         "style": "",
-                        "id": "capacity",
+                        "id": "capacityNumberOfParticipant",
                         "placeholder": "",
                         "value": "",
                         "readonlyLabel": "",
@@ -111,8 +88,12 @@
                         "requiredSanitize": "",
                         "readonly": "",
                         "validator": {
-                            "className": "",
-                            "properties": {}
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "alphanumeric",
+                                "message": "Please Enter Something",
+                                "mandatory": "true"
+                            }
                         },
                         "workflowVariable": "",
                         "label": "Booking Rules",
@@ -129,8 +110,12 @@
                     "properties": {
                         "readonly": "",
                         "validator": {
-                            "className": "",
-                            "properties": {}
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please choose a time!",
+                                "mandatory": "true"
+                            }
                         },
                         "workflowVariable": "",
                         "label": "Available from (time)",
@@ -145,8 +130,12 @@
                     "properties": {
                         "readonly": "",
                         "validator": {
-                            "className": "",
-                            "properties": {}
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please choose a time!",
+                                "mandatory": "true"
+                            }
                         },
                         "workflowVariable": "",
                         "label": "Available to (time)",
@@ -206,8 +195,12 @@
                             }
                         ],
                         "validator": {
-                            "className": "",
-                            "properties": {}
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please choose a status!",
+                                "mandatory": "true"
+                            }
                         },
                         "workflowVariable": "",
                         "label": "Status",
