--- a/forms/facilitySettingsForm.json
+++ b/forms/facilitySettingsForm.json
@@ -3,37 +3,57 @@
         "elements": [{
             "elements": [
                 {
-                    "className": "org.joget.apps.form.lib.SelectBox",
+                    "className": "org.joget.apps.form.lib.TextField",
                     "properties": {
-                        "readonly": "False",
-                        "multiple": "False",
-                        "label": "Select Box",
-                        "id": "field1",
-                        "readonlyLabel": "False"
+                        "requiredSanitize": "",
+                        "maxlength": "",
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "alphanumeric",
+                                "message": "Please fill in this field",
+                                "mandatory": "true"
+                            }
+                        },
+                        "label": "Facility ID",
+                        "disableIncrementDecrementArrow": "",
+                        "encryption": "",
+                        "readonly": "",
+                        "size": "",
+                        "workflowVariable": "",
+                        "style": "",
+                        "id": "facilityId",
+                        "placeholder": "",
+                        "value": "",
+                        "readonlyLabel": "",
+                        "storeNumeric": ""
                     }
                 },
                 {
                     "className": "org.joget.apps.form.lib.TextField",
                     "properties": {
-                        "encryption": "false",
-                        "readonly": "False",
+                        "requiredSanitize": "",
+                        "maxlength": "",
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "numeric",
+                                "message": "Please fill in this field",
+                                "mandatory": "true"
+                            }
+                        },
+                        "label": "Max Capacity",
+                        "disableIncrementDecrementArrow": "",
+                        "encryption": "",
+                        "readonly": "",
+                        "size": "",
+                        "workflowVariable": "",
                         "style": "",
-                        "label": "Text Field",
-                        "id": "field2",
-                        "readonlyLabel": "False",
-                        "storeNumeric": "False"
-                    }
-                },
-                {
-                    "className": "org.joget.apps.form.lib.TextField",
-                    "properties": {
-                        "encryption": "false",
-                        "readonly": "False",
-                        "style": "",
-                        "label": "Text Field",
-                        "id": "field3",
-                        "readonlyLabel": "False",
-                        "storeNumeric": "False"
+                        "id": "maxCapacity",
+                        "placeholder": "",
+                        "value": "",
+                        "readonlyLabel": "",
+                        "storeNumeric": ""
                     }
                 }
             ],
