Update form adminFacilityConfigurationForm.

--- a/forms/adminFacilityConfigurationForm.json
+++ b/forms/adminFacilityConfigurationForm.json
@@ -231,7 +231,7 @@
                         },
                         "workflowVariable": "",
                         "label": "Status",
-                        "id": "activeStatus",
+                        "id": "facilityStatus",
                         "value": "",
                         "readonlyLabel": ""
                     }
