--- a/forms/bookingApprovalForm.json
+++ b/forms/bookingApprovalForm.json
@@ -14,8 +14,8 @@
                         "noframe": "",
                         "formDefId": "FacilitiesBookingRequestForm",
                         "subFormParentId": "",
-                        "id": "field1",
-                        "label": "",
+                        "id": "subform",
+                        "label": "subform",
                         "storeBinder": {
                             "className": "org.joget.apps.form.lib.WorkflowFormBinder",
                             "properties": {}
@@ -62,8 +62,29 @@
         }],
         "className": "org.joget.apps.form.model.Section",
         "properties": {
-            "label": "Section",
-            "id": "section1"
+            "visibilityControl": "",
+            "permissionReadonly": "",
+            "permission": {
+                "className": "",
+                "properties": {}
+            },
+            "label": "Booking Approval Form",
+            "reverse": "",
+            "storeBinder": {
+                "className": "",
+                "properties": {}
+            },
+            "visibilityValue": "",
+            "regex": "",
+            "readonly": "",
+            "loadBinder": {
+                "className": "",
+                "properties": {}
+            },
+            "comment": "",
+            "id": "bookingApprovalForm",
+            "join": "",
+            "readonlyLabel": ""
         }
     }],
     "className": "org.joget.apps.form.model.Form",
