Update form adminReportConfigForm.

--- a/forms/adminReportConfigForm.json
+++ b/forms/adminReportConfigForm.json
@@ -97,7 +97,7 @@
                             }
                         },
                         "format": "",
-                        "label": "Start Date",
+                        "label": "Start Dates",
                         "datePickerType": "",
                         "currentDateAs": "",
                         "endDateFieldId": "",
