Update form adminReportConfigForm.

--- a/forms/adminReportConfigForm.json
+++ b/forms/adminReportConfigForm.json
@@ -1,49 +1,184 @@
 {
     "elements": [{
         "elements": [{
-            "elements": [{
-                "className": "org.joget.apps.form.lib.SelectBox",
-                "properties": {
-                    "controlField": "",
-                    "readonly": "",
-                    "size": "",
-                    "optionsBinder": {
-                        "className": "",
-                        "properties": {}
-                    },
-                    "multiple": "",
-                    "options": [
-                        {
-                            "label": "Usage",
-                            "value": "Usage",
-                            "grouping": "Report Type"
+            "elements": [
+                {
+                    "className": "org.joget.apps.form.lib.SelectBox",
+                    "properties": {
+                        "controlField": "",
+                        "readonly": "",
+                        "size": "",
+                        "optionsBinder": {
+                            "className": "",
+                            "properties": {}
                         },
-                        {
-                            "label": "Feedback Summary",
-                            "value": "Feedback Summary",
-                            "grouping": "Report Type"
+                        "multiple": "",
+                        "options": [
+                            {
+                                "label": "Usage",
+                                "value": "Usage",
+                                "grouping": "Report Type"
+                            },
+                            {
+                                "label": "Feedback Summary",
+                                "value": "Feedback Summary",
+                                "grouping": "Report Type"
+                            },
+                            {
+                                "label": "Peak Time",
+                                "value": "Peak Time",
+                                "grouping": "Report Type"
+                            }
+                        ],
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please select a report type!",
+                                "mandatory": "true"
+                            }
                         },
-                        {
-                            "label": "Peak Time",
-                            "value": "Peak Time",
-                            "grouping": "Report Type"
-                        }
-                    ],
-                    "validator": {
-                        "className": "org.joget.apps.form.lib.DefaultValidator",
-                        "properties": {
-                            "type": "",
-                            "message": "Please select a report type!",
-                            "mandatory": "true"
-                        }
-                    },
-                    "workflowVariable": "",
-                    "label": "Report Type",
-                    "id": "reportType",
-                    "value": "",
-                    "readonlyLabel": ""
+                        "workflowVariable": "",
+                        "label": "Report Type",
+                        "id": "reportType",
+                        "value": "",
+                        "readonlyLabel": ""
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.SelectBox",
+                    "properties": {
+                        "controlField": "",
+                        "readonly": "",
+                        "size": "",
+                        "optionsBinder": {
+                            "className": "org.joget.apps.form.lib.FormOptionsBinder",
+                            "properties": {
+                                "addEmptyOption": "true",
+                                "groupingColumn": "facilityType",
+                                "useAjax": "",
+                                "formDefId": "adminFacilityConfigurationForm",
+                                "labelColumn": "facilityType",
+                                "extraCondition": "",
+                                "cacheInterval": "",
+                                "emptyLabel": "",
+                                "idColumn": "facilityType"
+                            }
+                        },
+                        "multiple": "",
+                        "options": [],
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please select a facility type!",
+                                "mandatory": "true"
+                            }
+                        },
+                        "workflowVariable": "",
+                        "label": "Facility Type",
+                        "id": "facilityType",
+                        "value": "",
+                        "readonlyLabel": ""
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.DatePicker",
+                    "properties": {
+                        "yearRange": "c-10:c+10",
+                        "dataFormat": "yyyy-MM-dd",
+                        "startDateFieldId": "",
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please select a start date!",
+                                "mandatory": "true"
+                            }
+                        },
+                        "format": "",
+                        "label": "Start Date",
+                        "datePickerType": "",
+                        "currentDateAs": "",
+                        "endDateFieldId": "",
+                        "readonly": "",
+                        "allowManual": "",
+                        "workflowVariable": "",
+                        "id": "startDate",
+                        "placeholder": "",
+                        "disableWeekends": "",
+                        "value": "",
+                        "readonlyLabel": ""
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.DatePicker",
+                    "properties": {
+                        "yearRange": "c-10:c+10",
+                        "dataFormat": "yyyy-MM-dd",
+                        "startDateFieldId": "",
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please select an end date!",
+                                "mandatory": "true"
+                            }
+                        },
+                        "format": "",
+                        "label": "End Date",
+                        "datePickerType": "",
+                        "currentDateAs": "",
+                        "endDateFieldId": "",
+                        "readonly": "",
+                        "allowManual": "",
+                        "workflowVariable": "",
+                        "id": "endDate",
+                        "placeholder": "",
+                        "disableWeekends": "",
+                        "value": "",
+                        "readonlyLabel": ""
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.SelectBox",
+                    "properties": {
+                        "controlField": "",
+                        "readonly": "",
+                        "size": "",
+                        "optionsBinder": {
+                            "className": "",
+                            "properties": {}
+                        },
+                        "multiple": "",
+                        "options": [
+                            {
+                                "label": "CSV",
+                                "value": "CSV",
+                                "grouping": "Export Format"
+                            },
+                            {
+                                "label": "PDF",
+                                "value": "PDF",
+                                "grouping": "Export Format"
+                            }
+                        ],
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please select an export type!",
+                                "mandatory": "true"
+                            }
+                        },
+                        "workflowVariable": "",
+                        "label": "Export Format",
+                        "id": "exportFormat",
+                        "value": "",
+                        "readonlyLabel": ""
+                    }
                 }
-            }],
+            ],
             "className": "org.joget.apps.form.model.Column",
             "properties": {"width": "100%"}
         }],
