Update form adminReportConfigForm.

--- a/forms/adminReportConfigForm.json
+++ b/forms/adminReportConfigForm.json
@@ -172,7 +172,7 @@
                             }
                         },
                         "workflowVariable": "",
-                        "label": "Export Formats",
+                        "label": "Export Format",
                         "id": "exportFormat",
                         "value": "",
                         "readonlyLabel": ""
