Update form adminReportConfigForm.

--- a/forms/adminReportConfigForm.json
+++ b/forms/adminReportConfigForm.json
@@ -172,8 +172,8 @@
                             }
                         },
                         "workflowVariable": "",
-                        "label": "Export Format",
-                        "id": "exportFormat",
+                        "label": "Export Formats",
+                        "id": "exportFormats",
                         "value": "",
                         "readonlyLabel": ""
                     }
