Update form adminReportConfigForm.

--- a/forms/adminReportConfigForm.json
+++ b/forms/adminReportConfigForm.json
@@ -56,6 +56,27 @@
                         "readonlyLabel": "False",
                         "storeNumeric": "False"
                     }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.PasswordField",
+                    "properties": {
+                        "strengthChecker": "False",
+                        "readonly": "False",
+                        "label": "Password Field",
+                        "id": "field3",
+                        "readonlyLabel": "False"
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.TextArea",
+                    "properties": {
+                        "readonly": "False",
+                        "label": "Text Area",
+                        "id": "field4",
+                        "rows": "5",
+                        "cols": "20",
+                        "readonlyLabel": "False"
+                    }
                 }
             ],
             "className": "org.joget.apps.form.model.Column",
